--- a/bista_sales_approval/views/sale_order_approval_button_view.xml
+++ b/bista_sales_approval/views/sale_order_approval_button_view.xml
@@ -49,6 +49,9 @@
             <xpath expr="//field[@name='commitment_date']" position="after">
                 <field name="date_approve" invisible="1"/>
             </xpath>
+            <xpath expr="//page[@name='order_lines']//tree//field[@name='route_id']" position="attributes">
+                <attribute name="groups">bista_sales_approval.group_create_sale_order</attribute>
+            </xpath>
 
             <notebook position="inside">
                 <page name="sale_approval_log_ids" string="Approval Status">
