--- a/sale_advance_payment/views/sale_view.xml
+++ b/sale_advance_payment/views/sale_view.xml
@@ -11,7 +11,7 @@
                     string="Pay sale advanced"
                     type="action"
                     groups="account.group_account_invoice"
-                    attrs="{'invisible': [('state', 'in', ['done','cancel'])]}"
+                    attrs="{'invisible': [('state', 'in', ['draft', 'sent','quote_confirm', 'quote_approval','done','cancel'])]}"
                 />
             </button>
             <notebook position="inside">
