--- a/bista_sale/report/sale.xml
+++ b/bista_sale/report/sale.xml
@@ -87,8 +87,10 @@
                     <br/>
                 </t>
                 <t t-set="report_tagline" >
-                    <div style="margin-left: 5rem !important; margin-top: 0px !important;font-color: black;">
-                    <h5>Thank you for requesting this quote --Inspiration is just an order away!</h5>
+                    <div class="o_boxed_header " style="margin-top: 0px !important; ">
+                        <div style="margin-left: 5rem !important; " >
+                            <h5>Thank you for requesting this quote --Inspiration is just an order away!</h5>
+                        </div>
                     </div>
                 </t>
                 <t t-set="information_block">
@@ -358,39 +360,39 @@
 <!--                    </span>-->
 <!--                </div>-->
                 <div name="footer_table">
-                    <table style="width:170pt;margin-left:190px; border-left: 1px solid black; border-right: 1px solid black;">
-                        <tr style="border-top: 1px solid black;">
+                    <table style="width:170pt; height:120pt; margin-left:200px;">
+                        <tr>
                             <td style="height:1px; color: black; padding-left:10px;"
                                 class="text-left">
                                 <strong>Subtotal</strong>
                             </td>
 
-                            <td style="padding-right:8px;height:1px;padding-left:10px; border-left: 1px solid black;background-color: white; color:black;"
+                            <td style="padding-right:8px;height:1px;padding-left:10px;background-color: white; color:black;"
                                 class="text-right">
-                                <span t-field="doc.amount_untaxed"/>
+                                <strong t-field="doc.amount_untaxed"  t-options='{"widget": "monetary", "display_currency": doc.currency_id}'/>
                             </td>
                         </tr>
-                        <tr style="border-top: 1px solid black;">
+                        <tr>
                             <td style="height:1.5px;background-color: white; padding-left:10px;"
                                 class="text-left">
                                 <strong class="text-right">Tax</strong>
                             </td>
-                            <td style="padding-right:8px; height:1.5px;border-left: 1px solid black; color:black; background-color: white;"
+                            <td style="padding-right:8px; height:1.5px;color:black; background-color: white;"
                                 class="text-right">
-                                <span t-field="doc.amount_tax"/>
+                                <strong t-field="doc.amount_tax" t-options='{"widget": "monetary", "display_currency": doc.currency_id}'/>
                             </td>
                         </tr>
-                        <tr style="border-top: 1px solid black;">
+                        <tr>
                             <td style="height:1.5px;background-color: white; padding-left:10px;"
                                 class="text-left">
                                 <strong class="text-right">Coupon Code</strong>
                             </td>
-                            <td style="padding-right:8px; height:1.5px;border-left: 1px solid black; color:black; background-color: white;"
+                            <td style="padding-right:8px; height:1.5px; color:black; background-color: white;"
                                 class="text-right">
-                                <span t-esc="8456789"/>
+                                <strong t-esc="8456789"/>
                             </td>
                         </tr>
-                        <tr style="border-top: 1px solid black;">
+                        <tr>
                             <td style="padding-top:5px;color: black; padding-left:10px; background-color: white;"
                                 class="text-left">
                                 <t t-if="doc.carrier_id">
@@ -404,7 +406,7 @@
                                 </t>
 
                             </td>
-                            <td style="height:1px;padding-right:8px;padding-top:5px;border-left: 1px solid black; padding-left:10px; background-color: white;"
+                            <td style="height:1px;padding-right:8px;padding-top:5px; padding-left:10px; background-color: white;"
                                 class="text-right">
                                 <t t-esc="sum([line.price_total for line in doc.order_line if line.is_delivery])"
                                    t-options='{"widget": "monetary", "display_currency": doc.currency_id}'>
@@ -421,19 +423,19 @@
 <!--                                <span t-esc="hrs"/>-->
 <!--                            </td>-->
 <!--                        </tr>-->
-                        <tr style="background-color: #f56343; border-top: 1px solid black;">
+                        <tr >
                             <td style="padding-left:10px;color: black;" class="text-left">
                                 <strong class="border-black o_subtotal;text-right">Total</strong>
                             </td>
-                            <td style="padding-right:8px;color: black;border-left: 1px solid black;" class="text-right">
-                                <strong t-field="doc.amount_total"/>
+                            <td style="padding-right:8px;color: black;" class="text-right">
+                                <strong t-field="doc.amount_total" t-options='{"widget": "monetary", "display_currency": doc.currency_id}'/>
                             </td>
                         </tr>
-                        <tr style=" border-top: 1px solid black; border-bottom: 1px solid black;">
+                        <tr>
                             <td style="padding-left:10px;color: black;" class="text-left">
                                 <strong class="border-black o_subtotal;text-right">Total Savings</strong>
                             </td>
-                            <td style="padding-right:8px;color: black;border-left: 1px solid black; border-bottom: 1px solid black;" class="text-right">
+                            <td style="padding-right:8px;color: black;" class="text-right">
                                 <strong t-esc="sum((line.product_uom_qty*line.price_unit)-line.price_subtotal for line in doc.order_line)"
                                         t-options='{"widget": "monetary", "display_currency": doc.currency_id}'/>
                             </td>
@@ -456,16 +458,15 @@
                 </div>
             </div>
             <div class="text-center">
-                <img src='/bista_sale/static/src/img/payment_logo.png' style="max-height: 45px;"/>
+                <img src='/bista_sale/static/src/img/payment_logo.png' style="max-height: 45px; " class="mt-0"/>
             </div>
-            <div class="text-center mt-0">
-                <div>
-                    <p style="margin-bottom:0px;">ACH / Wire Instructions available upon request.</p>
-                    <strong>Interested in using a Purchase Order, click here:<a href=" https://bkp.al/PO" class="btn btn-link" role="button"> https://bkp.al/PO</a></strong>
-                </div>
+            <div class="text-center" style="margin-top: -8px !important;">
+                    <span style="margin-bottom:0px;">ACH / Wire Instructions available upon request.</span>
+                     <div style="margin-top: -12px !important;">
+                    <strong >Interested in using a Purchase Order, click here:<a href=" https://bkp.al/PO" class="btn btn-link" role="button" style="margin-left:-10px;"> https://bkp.al/PO</a></strong>
+                     </div>
             </div>
         </xpath>
-
         <xpath expr="//p[@t-field='doc.note']" position="replace"/>
         <xpath expr="//div[@name='so_total_summary']" position="after">
             <div class="row mt-5 mx-3" style="page-break-inside:avoid;" name="price_images">
@@ -505,4 +506,9 @@
         </xpath>
 
     </template>
+     <record id="sale.action_report_saleorder" model="ir.actions.report">
+        <field name="print_report_name">
+                (object.state in ('draft','sent','quote_approval','quote_confirm') and 'Quotation - %s' % (object.name) or
+               'Order - %s' % (object.name))</field>
+    </record>
 </odoo>
