[FIX] - Bug #18994 - issue of backorder report and barcode issue in picking and delivery report
(cherry picked from commit 8adc7fb265c7ac098e7026bacf1999e423d2fbfa)

--- a/bista_purchase/report/stock_picking.xml
+++ b/bista_purchase/report/stock_picking.xml
@@ -46,7 +46,7 @@
                     <h4>
                         <t t-esc="o.picking_type_id.warehouse_id.name"/>
                     </h4>
-                    <div class="text-right" style="padding-bottom: 20px; margin-left:150px;">
+                    <div class="text-right" style="margin-left:150px;">
                         <t t-esc="o.name"
                            t-options="{'widget': 'barcode', 'width': 310, 'height': 100, 'img_style': 'width:350px;height:55px;'}"
                         />
