--- a/bista_purchase/report/purchase_backorder_view.xml
+++ b/bista_purchase/report/purchase_backorder_view.xml
@@ -21,6 +21,10 @@
                             <h4>
                                 <t t-esc="o.picking_type_id.warehouse_id.name"/>
                             </h4>
+                            <div class="text-right" style="margin-left:180px;">
+                                <t t-esc="o.name" t-options="{'widget': 'barcode', 'width': 310, 'height': 100, 'img_style': 'width:350px;height:55px;'}"
+                                />
+                            </div>
                         </t>
                         <div class="row">
                             <div class="col-6" name="div_outgoing_address">
@@ -100,48 +104,57 @@
                         </div>
                         <br/>
                     </div>
-                    <table class="table table-sm " t-if="o.state!='done'" name="stock_move_table">
-                        <thead>
-                            <tr>
-                                <th name="th_sm_product">
-                                    <strong>Product</strong>
-                                </th>
-                                <th name="th_sm_ordered">
-                                    <strong>Ordered</strong>
-                                </th>
-                                <th name="th_sm_ordered">
-                                    <strong>Received</strong>
-                                </th>
-                                <th name="th_sm_quantity">
-                                    <strong>Pending</strong>
-                                    <t t-esc="qty"/>
-                                </th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <t t-set="lines" t-value="o.move_lines.filtered(lambda x: x.product_uom_qty)"/>
-                            <tr t-foreach="lines" t-as="move">
-                                <td>
-                                    <span t-field="move.product_id"/>
-                                    <p t-if="move.description_picking != move.product_id.name and move.description_picking != move.product_id.display_name">
-                                        <span t-field="move.description_picking"/>
-                                    </p>
-                                </td>
-                                <td>
-                                    <span t-field="move.purchase_line_id.product_qty"/>
-                                    <span t-field="move.product_uom"/>
-                                </td>
-                                <td>
-                                    <span t-field="move.purchase_line_id.qty_received"/>
-                                    <span t-field="move.product_uom"/>
-                                </td>
-                                <td>
-                                    <span t-field="move.product_uom_qty"/>
-                                    <span t-field="move.product_uom"/>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
+                    <t t-if="o.backorder_id">
+                        <table class="table table-sm " t-if="o.state!='done'" name="stock_move_table">
+                            <thead>
+                                <tr>
+                                    <th name="th_sm_product">
+                                        <strong>Product</strong>
+                                    </th>
+                                    <th name="th_sm_ordered">
+                                        <strong>Ordered</strong>
+                                    </th>
+                                    <th name="th_sm_ordered">
+                                        <strong>Received</strong>
+                                    </th>
+                                    <th name="th_sm_quantity">
+                                        <strong>Pending</strong>
+                                        <t t-esc="qty"/>
+                                    </th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <t t-set="lines" t-value="o.move_lines.filtered(lambda x: x.product_uom_qty)"/>
+                                <tr t-foreach="lines" t-as="move">
+                                    <td>
+                                        <span t-field="move.product_id"/>
+                                        <p t-if="move.description_picking != move.product_id.name and move.description_picking != move.product_id.display_name">
+                                            <span t-field="move.description_picking"/>
+                                        </p>
+                                    </td>
+                                    <td>
+                                        <span t-field="move.purchase_line_id.product_qty"/>
+                                        <span t-field="move.product_uom"/>
+                                    </td>
+                                    <td>
+                                        <span t-field="move.purchase_line_id.qty_received"/>
+                                        <span t-field="move.product_uom"/>
+                                    </td>
+                                    <td>
+                                        <span t-field="move.product_uom_qty"/>
+                                        <span t-field="move.product_uom"/>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </t>
+                    <t t-else="">
+                        <div class="text-center">
+                            <h4>
+                                <strong>No BackOrder</strong>
+                            </h4>
+                        </div>
+                    </t>
                 </t>
             </t>
         </t>
