--- a/bista_sale/views/sale_templates.xml
+++ b/bista_sale/views/sale_templates.xml
@@ -27,9 +27,26 @@
                 <span t-field="line.saving_amount" t-options="{'widget': 'monetary', 'display_currency': line.currency_id , 'decimal_precision': 'Product Price'}" />
             </td>
         </xpath>
-        <xpath expr="//table[@id='sales_order_table']//td[3]/div[1]" position="attributes">
+        <xpath expr="//table[@id='sales_order_table']//td[3]" position="replace">
+            <td t-attf-class="text-right {{ 'd-none d-sm-table-cell' if report_type == 'html' else '' }}">
+                <div
+                    t-if="line.discount &gt;= 0"
+                    t-field="line.price_unit"
+                    t-att-style="line.discount and 'text-decoration: line-through' or None"
+                    t-att-class="(line.discount and 'text-danger' or '') + ' text-right'"
+                    t-options='{"widget": "monetary", "display_currency": line.currency_id}'
+                />
+                <div t-if="line.discount">
+                    <t t-esc="(1-line.discount / 100.0) * line.price_unit" t-options='{"widget": "monetary", "display_currency": line.currency_id}'/>
+                </div>
+            </td>
+        </xpath>
+<!--         <xpath expr="//table[@id='sales_order_table']//td[3]/div[1]" position="attributes">
             <attribute name="t-options">{'widget': 'monetary', 'display_currency': line.currency_id}</attribute>
         </xpath>
+        <xpath expr="//table[@id='sales_order_table']//td[3]/div[2]" position="attributes">
+            <attribute name="t-options">{'widget': 'monetary', 'display_currency': line.currency_id}</attribute>
+        </xpath> -->
         <xpath expr="//table[@id='sales_order_table']//th[5]" position="replace" />
         <xpath expr="//table[@id='sales_order_table']//td[5]" position="replace" />
         <!-- <xpath expr="//div[@name='total']/div" position="after">
