[FIX] - Bug #19035 - changed the string of button in shipment wizard

--- a/bista_sale_multi_ship/views/sale_order_view.xml
+++ b/bista_sale_multi_ship/views/sale_order_view.xml
@@ -156,7 +156,7 @@
                     </group>
                     <footer>
                     <!-- <button name="action_put_in_pack" type="object" string="Apply Package" class="btn-primary"/> -->
-                    <button string="Discard" special="cancel" data-hotkey="z" class="btn-secondary"/>
+                    <button string="Close" special="cancel" data-hotkey="z" class="btn-secondary"/>
                 </footer>
                 </form>
             </field>
