--- a/bista_orders_report/views/purchase_order_line_view.xml
+++ b/bista_orders_report/views/purchase_order_line_view.xml
@@ -12,7 +12,7 @@
                 <field name="date_order"/>
                 <field name="date_planned" string="Expected Receipt Date" optional="show"/>
                 <field name="product_id"/>
-                <field name="disc_price_unit" string="Unit Price" optional="show" widget="monetary"/>
+                <field name="price_unit" string="Unit Price" optional="show" widget="monetary"/>
                 <field name="currency_id" optional="hide"/>
                 <field name="uom_id" optional="show"/>
                 <field name="origin" optional="show"/>
