--- a/bista_purchase/report/account_move.xml
+++ b/bista_purchase/report/account_move.xml
@@ -219,7 +219,7 @@
                     </td>
                     <td class="text-right text-danger" name="td_bp_price"
                         style="border-bottom: 1px solid black;border-right: 1px solid black;border-top: 1px solid black;">
-                        <span t-field="line.purchase_line_id.disc_price_unit" t-options='{"widget": "monetary", "display_currency": o.currency_id}'/>
+                        <span t-field="line.purchase_line_id.price_unit" t-options='{"widget": "monetary", "display_currency": o.currency_id}'/>
                     </td>
                 </t>
                 <td t-attf-class="text-left {{ 'd-none d-md-table-cell' if report_type == 'html' else '' }}"
