--- a/purchase_pricelist/views/purchase_order_view.xml
+++ b/purchase_pricelist/views/purchase_order_view.xml
@@ -40,7 +40,7 @@
                 <attribute name="readonly">1</attribute>
             </xpath>
             <xpath expr="//field[@name='order_line']/tree/field[@name='price_unit']" position="before">
-                <field name="before_disc_price_unit" optional="hide" />
+                <field name="before_disc_price_unit"/>
                 <field name="discount" />
                 <field name="without_disc_price_subtotal" invisible="1" />
             </xpath>
