--- a/bista_purchase/report/account_move.xml
+++ b/bista_purchase/report/account_move.xml
@@ -10,7 +10,7 @@
             <div class="page ">
                 <div t-set="address">
                     <span>
-                        <strong>BILL To Address</strong>
+                        <strong>Bill To Address</strong>
                     </span>
                     <t t-if="o.partner_id.parent_id.name">
                         <div>
@@ -84,12 +84,12 @@
                             <t t-esc="o.invoice_origin"/>
                             <br/>
                         </t>
-                        <t t-foreach="request.env['sale.order'].sudo().search([('name', '=', o.invoice_origin)])"
-                           t-as="sale">
-                            <strong>Order Date:</strong>
-                            <t t-esc="sale.date_order" t-options='{"widget": "date"}'/>
-                            <br/>
-                        </t>
+<!--                        <t t-foreach="request.env['sale.order'].sudo().search([('name', '=', o.invoice_origin)])"-->
+<!--                           t-as="sale">-->
+<!--                            <strong>Order Date:</strong>-->
+<!--                            <t t-esc="sale.date_order" t-options='{"widget": "date"}'/>-->
+<!--                            <br/>-->
+<!--                        </t>-->
                         <t t-foreach="request.env['purchase.order'].sudo().search([('name', '=', o.invoice_origin)])"
                            t-as="purchase">
                             <div class="text-danger">
@@ -98,9 +98,9 @@
                                 <br/>
                             </div>
                         </t>
-                        <t t-if="o.move_type == 'out_invoice' and o.state == 'posted'">
+                        <t t-if="o.move_type == 'out_invoice' and o.state == 'posted' and o.state in ['posted']">
                             <strong>Invoice Date:</strong>
-                            <t t-esc="o.create_date" t-options='{"widget": "date"}'/>
+                            <t t-esc="o.invoice_date" t-options='{"widget": "date"}'/>
                             <br/>
                         </t>
                         <t t-if="o.move_type == 'out_invoice' and o.state == 'posted'">
@@ -137,7 +137,7 @@
                 <tr>
                     <th class="text-center"
                         style="border-top: 1px solid black;border-bottom: 1px solid black;border-right: 1px solid black;">
-                        <strong>ISBN</strong>
+                        <strong>SKU</strong>
                     </th>
                     <th class="text-center"
                         style="border-top: 1px solid black;border-bottom: 1px solid black;border-right: 1px solid black;">
@@ -145,16 +145,16 @@
                     </th>
                     <th class="text-center"
                         style="border-top: 1px solid black;border-bottom: 1px solid black;border-right: 1px solid black;">
-                        <strong>Format</strong>
+                        <strong>Product Format</strong>
                     </th>
                     <th class="text-center"
                         style="border-top: 1px solid black;border-bottom: 1px solid black;border-right: 1px solid black;">
-                        <strong>Qty</strong>
+                        <strong>Quantity</strong>
                     </th>
                     <t t-if="o.move_type == 'out_invoice'">
                         <th class="text-center"
                             style="border-top: 1px solid black;border-bottom: 1px solid black; border-right: 1px solid black;">
-                            <strong>Unit</strong>
+                            <strong>Unit Price</strong>
                         </th>
                     </t>
                     <t t-if="o.move_type == 'in_invoice'">
@@ -286,7 +286,7 @@
                             <span t-esc="0.0" t-options='{"widget": "monetary", "display_currency": o.currency_id}'/>
                         </td>
                     </tr>
-                    <tr style="background-color: #f56343;">
+                    <tr>
                         <td style="border-top: 1px solid black; border-left: 1px solid black; border-right: 1px solid black; padding-left:10px;">
                             <strong class="border-black o_subtotal;text-right">Total Due</strong>
                         </td>
