--- a/bista_sale/report/sale.xml
+++ b/bista_sale/report/sale.xml
@@ -61,7 +61,7 @@
                     </t>
                 </div>
                 <t t-set="report_info"
-                   class="col-6 text-right mb4">
+                   class="col-6 text-right">
                     <h3 t-if="o.state in ['sale','order_booked','credit_review','pending_for_approval','cancel','done']">Sale Order</h3>
                     <h3 t-if="o.state in ['draft','sent','quote_approval','quote_confirm']">Quotation</h3>
                     <h3 t-if="o.state == 'cancel'">Cancelled Sale Quotation/Order</h3>
@@ -88,7 +88,7 @@
                 </t>
                 <t t-set="report_tagline" >
                     <div class="o_boxed_header " style="margin-top: 0px !important; ">
-                        <div style="margin-left: 5rem !important; " >
+                        <div style="margin-left: 5rem !important;">
                             <h5>Thank you for requesting this quote --Inspiration is just an order away!</h5>
                         </div>
                     </div>
@@ -450,7 +450,7 @@
                 <div>
                     <div class="text-center" style="margin-top:10px;">
                         <p class="mt-5" style="margin-left: 325px;width:26%; height:50pt;background-color:red;">
-                            <a t-att-href="doc.compute_customer_preview_url()" class="btn btn-link" role="button" style="margin-top:15px;">
+                            <a t-att-href="doc.sudo().compute_customer_preview_url()" class="btn btn-link" role="button" style="margin-top:15px;">
                                  <strong style="color: #FFFFFF;">Proceed to Checkout</strong>
                             </a>
                         </p>
