[FIX] - Bug #18994 - remove the domain of state in backorder report
(cherry picked from commit f3a115fba01ad3076f8fdd2743d97a33251e2f69)

--- a/bista_purchase/report/purchase_backorder_view.xml
+++ b/bista_purchase/report/purchase_backorder_view.xml
@@ -105,7 +105,7 @@
                         <br/>
                     </div>
                     <t t-if="o.backorder_id">
-                        <table class="table table-sm " t-if="o.state!='done'" name="stock_move_table">
+                        <table class="table table-sm" name="stock_move_table">
                             <thead>
                                 <tr>
                                     <th name="th_sm_product">
