--- a/bista_sale/report/sale.xml
+++ b/bista_sale/report/sale.xml
@@ -1,5 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
+
+    <record id="paperformat_quotation_sale_report" model="report.paperformat">
+        <field name="name">Sale/Quotation Report</field>
+        <field name="default" eval="False"/>
+        <field name="disable_shrinking" eval="True"/>
+        <field name="format">A4</field>
+        <field name="page_height">0</field>
+        <field name="page_width">0</field>
+        <field name="orientation">Portrait</field>
+        <field name="header_spacing">25</field>
+        <field name="margin_top">28</field>
+        <field name="margin_bottom">18</field>
+        <field name="margin_left">7</field>
+        <field name="margin_right">7</field>
+        <field name="header_line">False</field>
+        <field name="dpi">90</field>
+    </record>
     <template id="report_saleorder_document_extended"
               inherit_id="sale.report_saleorder_document">
         <xpath expr="//t[@t-call='web.external_layout']" position="attributes">
@@ -87,7 +104,7 @@
                     <br/>
                 </t>
                 <t t-set="report_tagline" >
-                    <div class="o_boxed_header " style="margin-top: 0px !important; ">
+                    <div class="o_boxed_header" style="margin-top: 0px !important;">
                         <div style="margin-left: 5rem !important;">
                             <h5>Thank you for requesting this quote --Inspiration is just an order away!</h5>
                         </div>
