--- a/bista_purchase/report/account_move.xml
+++ b/bista_purchase/report/account_move.xml
@@ -113,18 +113,21 @@
                             <t t-esc="o.invoice_date_due" t-options='{"widget": "date"}'/>
                             <br/>
                         </t>
+                        <strong>Payment Status :</strong>
+                        <t t-esc="o.payment_state"/>
+                        <br/>
                         <strong>BookPal Account # :</strong>
                         <t t-esc="428475"/>
                         <br/>
                         <strong>Client PO Number:</strong>
                         <t t-esc="o.sale_order_id.client_order_ref"/>
                         <br/>
-                        <strong>Payment Terms:</strong>
-                        <t t-esc="o.invoice_payment_term_id.name"/>
-                        <br/>
-                        <strong>Salesperson:</strong>
-                        <t t-esc="o.invoice_user_id.name"/>
-                        <br/>
+<!--                        <strong>Payment Terms:</strong>-->
+<!--                        <t t-esc="o.invoice_payment_term_id.name"/>-->
+<!--                        <br/>-->
+<!--                        <strong>Salesperson:</strong>-->
+<!--                        <t t-esc="o.invoice_user_id.name"/>-->
+<!--                        <br/>-->
                     </t>
                 </t>
             </div>
@@ -140,7 +143,7 @@
                         <strong>SKU</strong>
                     </th>
                     <th class="text-center"
-                        style="border-top: 1px solid black;border-bottom: 1px solid black;border-right: 1px solid black;">
+                        style="border-top: 1px solid black;border-bottom: 1px solid black;border-right: 1px solid black; width:40%">
                         <strong>Title</strong>
                     </th>
                     <th class="text-center"
@@ -176,7 +179,7 @@
                         <span>Taxes</span>
                     </th>
                     <th class="text-center"
-                        style="border-top: 1px solid black;border-bottom: 1px solid black; border-right: 1px solid black;">
+                        style="border-top: 1px solid black;border-bottom: 1px solid black; border-right: 1px solid black; width:150px;">
                         <strong>Total</strong>
                     </th>
                 </tr>
@@ -186,28 +189,28 @@
             <t t-if="not line.display_type">
                 <td id="td_default_code" class="text-left"
                     style="border-bottom: 1px solid black;border-right: 1px solid black;border-left: 1px solid black;border-top: 1px solid black;">
-                    <span t-field="line.product_id.isbn"/>
+                    <span t-field="line.product_id.default_code"/>
                 </td>
                 <td id="product"
-                    style="border-bottom: 1px solid black;border-right: 1px solid black;border-top: 1px solid black;">
+                    style="border-bottom: 1px solid black;border-right: 1px solid black;border-top: 1px solid black; width:40%;">
                     <span t-field="line.name"/>
                 </td>
                 <td class="text-center" name="td_format"
                     style="border-bottom: 1px solid black;border-right: 1px solid black;border-top: 1px solid black; ">
                     <span t-field="line.product_id.product_format"/>
                 </td>
-                <td class="text-right"
+                <td class="text-center"
                     style="border-bottom: 1px solid black;border-right: 1px solid black;border-top: 1px solid black;">
                     <span t-field="line.quantity"/>
                 </td>
                 <t t-if="o.move_type == 'out_invoice'">
-                    <td class="text-right" name="td_cover"
+                    <td class="text-center" name="td_cover"
                         style="border-bottom: 1px solid black;border-right: 1px solid black;border-top: 1px solid black;">
                         <span t-field="line.sale_line_ids.discounted_price" t-options='{"widget": "monetary", "display_currency": o.currency_id}'/>
                     </td>
                 </t>
                 <t t-if="o.move_type == 'in_invoice'">
-                    <td class="text-right" name="td_cover"
+                    <td class="text-center" name="td_cover"
                         style="border-bottom: 1px solid black;border-right: 1px solid black;border-top: 1px solid black;">
                         <span t-field="line.price_unit" t-options='{"widget": "monetary", "display_currency": o.currency_id}'/>
                     </td>
@@ -236,14 +239,14 @@
         </xpath>
         <xpath expr="//table[@name='invoice_line_table']" position="after">
             <div>
-                <table style="border: 1px solid black; margin-left: auto; width:25%;">
+                <table style="border: 1px solid black; margin-left: auto; width:30%; height:150px;">
                     <t t-if="o.move_type == 'in_invoice'">
                         <tr class="border-black o_subtotal">
-                            <td style="border-left: 1px solid black;  width: 111px;padding-left:10px;">
+                            <td style="border-left: 1px solid black;padding-left:10px; width:150px;">
                                 <strong>Total W/D</strong>
                             </td>
                             <td class="text-right"
-                                style=" border-left: 1px solid black; border-right: 1px solid black; margin: auto; padding-right:8px;">
+                                style=" border-left: 1px solid black; border-right: 1px solid black; margin: auto; padding-right:8px; width:150px;">
                                 <!--                        <t t-esc="o.line_ids.purchase_order_id.without_disc_amount_untaxed"/>-->
                                 <t t-foreach="request.env['purchase.order'].sudo().search([('name', '=', o.invoice_origin)])"
                                    t-as="purchase">
@@ -266,7 +269,7 @@
                         <td style="padding-left:10px;">
                             <strong>Subtotal</strong>
                         </td>
-                        <td class="text-right" style="border-left: 1px solid black; padding-right:8px;">
+                        <td class="text-right" style="border-left: 1px solid black; padding-right:8px;width:150px;">
                             <span t-field="o.amount_untaxed"/>
                         </td>
                     </tr>
@@ -283,7 +286,7 @@
                             <strong class="text-right">Shipping</strong>
                         </td>
                         <td class="text-right" style="border-left: 1px solid black; padding-right:8px;">
-                            <span t-esc="0.0" t-options='{"widget": "monetary", "display_currency": o.currency_id}'/>
+                            <strong t-esc="0.0" t-options='{"widget": "monetary", "display_currency": o.currency_id}'/>
                         </td>
                     </tr>
                     <tr>
@@ -319,9 +322,9 @@
 <!--        <xpath expr="//div[@id='total']/div/table" position="attributes">-->
 <!--            <attribute name="style">width: 50.9% !important; margin-left: 49.2% !important;</attribute>-->
 <!--        </xpath>-->
-        <!--        <xpath expr="//table[@name='invoice_line_table']" position="attributes">-->
-        <!--            <attribute name="style">margin-bottom: 0rem; margin-top: 5px;</attribute>-->
-        <!--        </xpath>-->
+        <xpath expr="//table[@name='invoice_line_table']" position="attributes">
+            <attribute name="style">margin-bottom: 0rem;</attribute>
+        </xpath>
         <xpath expr="//div[@id='informations']" position="replace"/>
         <xpath expr="//h2" position="replace"/>
         <xpath expr="//div[hasclass('page')]" position="attributes">
