[FIX][#19151][#19224] Changed Code to AA & added new field for demand qty

--- a/bista_sale/views/sale_order_view.xml
+++ b/bista_sale/views/sale_order_view.xml
@@ -113,7 +113,7 @@
                                 <field name="product_use" class="bp_text_field"/>
                             </group>
                             <group>
-                                <field name="white_glove_id"/>
+                                <field name="white_glove_id" options="{'no_create': True, 'no_open': True}"/>
                                 <field name="ce_notes" class="bp_text_field"/>
                                 <field name="payment_notes" class="bp_text_field"/>
                                 <field name="am_notes" class="bp_text_field"/>
