--- a/bista_sale/views/stock_picking_view.xml
+++ b/bista_sale/views/stock_picking_view.xml
@@ -24,10 +24,10 @@
             <xpath expr="//field[@name='product_id']" position="after">
                 <field name="publisher_id" attrs="{'column_invisible': [('parent.sequence_code', '!=', 'PICK')]}" />
             </xpath>
-            <field name="product_uom_qty" position="attributes">
-                <attribute name="attrs">{}</attribute>
-                <attribute name="string">Demand</attribute>
+            <field name="qty_done" position="before">
+                <field name="demand_qty" force_save="1"/>
             </field>
+
         </field>
     </record>
 </odoo>
