[IMP] Bug #19294 - solved issue of wrong calculation in PO total table
(cherry picked from commit d192a6c39c04b82d9f75caf3b15ebbd2bf20d688)

--- a/purchase_pricelist/views/purchase_order_view.xml
+++ b/purchase_pricelist/views/purchase_order_view.xml
@@ -49,8 +49,8 @@
                 <field name="discount" />
             </xpath>
             <xpath expr="//field[@name='tax_totals_json']" position="before">
-                <field name="without_disc_amount_untaxed" colspan="2" string="Amount Untaxed (Without Disc.)" />
-                <field name="total_discount_amount" colspan="2" string="Discount" />
+                <field name="without_disc_amount_untaxed" colspan="2" />
+                <field name="total_discount_amount" colspan="2" />
             </xpath>
         </field>
     </record>
